// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render user organizations when they are not activated 1`] = `
<li
  className="dropdown js-user-authenticated"
>
  <a
    className="dropdown-toggle navbar-avatar"
    href="#"
    onClick={[Function]}
  >
    <Connect(Avatar)
      hash="abcd1234"
      name="foo"
      size={32}
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-right"
  >
    <li
      className="dropdown-item"
    >
      <div
        className="text-ellipsis text-muted"
        title="foo"
      >
        <strong>
          foo
        </strong>
      </div>
      <div
        className="little-spacer-top text-ellipsis text-muted"
        title="foo@bar.baz"
      >
        foo@bar.baz
      </div>
    </li>
    <li
      className="divider"
    />
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account"
      >
        my_account.page
      </Link>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        layout.logout
      </a>
    </li>
  </ul>
</li>
`;

exports[`should render the right interface for anonymous user 1`] = `
<li>
  <a
    className="navbar-login"
    href="#"
    onClick={[Function]}
  >
    layout.login
  </a>
</li>
`;

exports[`should render the right interface for logged in user 1`] = `
<li
  className="dropdown js-user-authenticated"
>
  <a
    className="dropdown-toggle navbar-avatar"
    href="#"
    onClick={[Function]}
  >
    <Connect(Avatar)
      hash="abcd1234"
      name="foo"
      size={32}
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-right"
  >
    <li
      className="dropdown-item"
    >
      <div
        className="text-ellipsis text-muted"
        title="foo"
      >
        <strong>
          foo
        </strong>
      </div>
      <div
        className="little-spacer-top text-ellipsis text-muted"
        title="foo@bar.baz"
      >
        foo@bar.baz
      </div>
    </li>
    <li
      className="divider"
    />
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account"
      >
        my_account.page
      </Link>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        layout.logout
      </a>
    </li>
  </ul>
</li>
`;

exports[`should render user organizations 1`] = `
<li
  className="dropdown js-user-authenticated"
>
  <a
    className="dropdown-toggle navbar-avatar"
    href="#"
    onClick={[Function]}
  >
    <Connect(Avatar)
      hash="abcd1234"
      name="foo"
      size={32}
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-right"
  >
    <li
      className="dropdown-item"
    >
      <div
        className="text-ellipsis text-muted"
        title="foo"
      >
        <strong>
          foo
        </strong>
      </div>
      <div
        className="little-spacer-top text-ellipsis text-muted"
        title="foo@bar.baz"
      >
        foo@bar.baz
      </div>
    </li>
    <li
      className="divider"
    />
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account"
      >
        my_account.page
      </Link>
    </li>
    <li
      className="divider"
      role="separator"
    />
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account/organizations"
      >
        my_organizations
      </Link>
    </li>
    <OrganizationListItem
      key="bar"
      organization={
        Object {
          "key": "bar",
          "name": "bar",
          "projectVisibility": "public",
        }
      }
    />
    <OrganizationListItem
      key="foo"
      organization={
        Object {
          "key": "foo",
          "name": "Foo",
          "projectVisibility": "public",
        }
      }
    />
    <OrganizationListItem
      key="myorg"
      organization={
        Object {
          "key": "myorg",
          "name": "MyOrg",
          "projectVisibility": "public",
        }
      }
    />
    <li
      className="divider"
      role="separator"
    />
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        layout.logout
      </a>
    </li>
  </ul>
</li>
`;
